--- a/wiki/Why_would_I_use_Navi_X.wiki
+++ b/wiki/Why_would_I_use_Navi_X.wiki
@@ -1,4 +1,4 @@
 #labels Phase-Support
-Issue: Why would I use Navi-X?
+*Issue:* Why would I use Navi-X?
 
-Explanation: Navi-X is a public directory of links to the best content on the internet! Don't spend countless hours looking for something when someone else has found it already and shared the link with everyone else! Many people use Navi-X as a replacement for their traditional television programming. Navi-X links to content on the internet and makes it available on demand in a hierarchical layout for quick browsing and searching of your favorite content! There should be centralized locations to find all the great multimedia on the internet and Navi-X serves that purpose!
+*Explanation:* Navi-X is a public directory of links to the best content on the internet! Don't spend countless hours looking for something when someone else has found it already and shared the link with everyone else! Many people use Navi-X as a replacement for their traditional television programming. Navi-X links to content on the internet and makes it available on demand in a hierarchical layout for quick browsing and searching of your favorite content! There should be centralized locations to find all the great multimedia on the internet and Navi-X serves that purpose!
