--- a/wiki/How_do_I_enable_and_access_Adult_content_in_Navi_X.wiki
+++ b/wiki/How_do_I_enable_and_access_Adult_content_in_Navi_X.wiki
@@ -1,4 +1,4 @@
-*Issue:*  How to I enable and access Adult Content in Navi-X?
+*Issue:*  How to I enable and access Adult content in Navi-X?
 
 *Explanation:*  You can go to the following link and place a check mark next to the option for "Display content tagged as adult for the above IP address" and click on "Save Prefs" below. You may also have to "Sync IP" in order for this to work. This button can be located below the "Forums" button on the main page on our Navi-Xtreme website.
 
