Edited wiki page How_do_I_add_links_to_a_playlist through web user interface.

--- a/wiki/How_do_I_add_links_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_links_to_a_playlist.wiki
@@ -1,4 +1,4 @@
-*Issue:* How to add links to a playlist
+*Issue:* How do I add links to a playlist
 
 *Explanation:* 
 *Static URL’s vs. Dynamic URL’s - Understanding the basics*
