Edited wiki page How_do_I_add_links_to_a_playlist through web user interface.

--- a/wiki/How_do_I_add_links_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_links_to_a_playlist.wiki
@@ -2,13 +2,13 @@
 
 *Explanation:* 
 *Static URL’s vs. Dynamic URL’s - Understanding the basics* - 
-Adding links to a playlist in Navi-X is a fairly straightforward process, but keep in mind that technical issues can prevent playback of media content when added to a playlist for many different reasons. If for some reason, your media is not adding or working properly in Navi-X, head over to http://www.navixtreme.com/forums and make a forum post about it, give us the link you are trying to make work in Navi-X and we can provide you with an explanation of what it will take to make the media you want to play, work in your media center from Navi-X. Don’t just give up on making something work off the bat in Navi-X… let us help you figure out why your media player will not play it.
+Adding links to a playlist in Navi-X is a fairly straightforward process, but keep in mind that technical issues can prevent playback of media content when added to a playlist for many different reasons. If for some reason, your media is not adding or working properly in Navi-X, head over to http://www.navixtreme.com/forums and make a forum post about it, give us the link you are trying to make work in Navi-X and we can provide you with an explanation of what it will take to make the media you want to play in your media center from Navi-X. Don’t just give up on making something work in Navi-X… let us help you figure out why your media player will not play it.
 
-There are typically two kinds of links on the internet… static links and dynamic links. Static links are those that link directly to a file with extension included in the URL itself. Dynamic links are basically links that point to a media item indirectly and typically do not have a file extension in the body of the URL.
+There are typically two kinds of links on the internet… Static links and Dynamic links. Static links are those that link directly to a file with the file extension included in the URL itself. Dynamic links are basically links that point to a media item indirectly and typically do not have a file extension in the body of the URL.
 
 Static links typically look like this:
 http://www.whatever.com/myfavoritemovie.mp4 ...
-Or .avi, .mp3, .ogg… basically a “dot” and three letter extension of the file type at the very end of the URL, indicating the file type, as well as the fact it is a direct static link.
+Or .avi, .mp3, .ogg… basically a “dot” and three letter file extension of the file type... located at the very end of the URL, indicating the file type, as well as the fact it is a direct static link.
 
 Dynamic links look like ANYTHING OTHER than static links, meaning there is no three letter file extension directly in the body of the URL. Here are a couple of examples I grabbed for “The Lorax” movie…
 http://www.vidxden.com/7wgczt27o9qe/12907.flv.html
@@ -16,11 +16,11 @@ http://www.novamov.com/video/p78l6b0begulo
 
 In the examples for dynamic links, you can see these URL’s link directly to webpages only and not to the actual URL of the file name that gets played in the media player directly.
 
-Normally, computer experts would use what is called a “port sniffer” to “sniff” out URL’s that are being run through your browsers player and your computers network card as you load webpages from the internet and a catch list would intercept and notate these for you. Port sniffing is a complicated endeavor and should not be taken up by those who are not capable of researching and figuring out themselves how to do this. It is not rocket science, but it does require you to independently learn how to do this yourself. A tutorial will be developed on this subject later to attempt to explain how this works.
+Normally, computer experts would use what is called a “port sniffer” to “sniff” out URL’s that are being run through your computers browsers, through your media player within the browser and your computers network card as you load webpages from the internet. A catch list would then intercept and notate these for you in a running list. Port sniffing is a complicated endeavor and should not be taken up by those who are not capable of researching and figuring out themselves how to do this. It is not rocket science, but it does require you to independently learn how to do this yourself. A tutorial will be developed on this subject later to attempt to explain how this works.
 
-Essentially, what happens when someone clicks on a link in a browsers media player is that the actual URL of the file being stored on a server somewhere is secretly handed to your video player when it verifies your ip address typically. Your player then loads the true location of the video hosted on their servers and begins to play on your java player in the browser… in general, content providers and broadcasters do not want you to have these links because they do not want users in general just linking to the files directly and sharing them with whoever. Content providers essentially then lose control over who is seeing what on your website as well as sometimes circumventing the injecting of ads they love to give us all the time. This is why we don’t get direct links to these files from service providers.
+Essentially, what happens when someone clicks on a link in a browsers media player is that the actual URL of the file being stored on a server somewhere is secretly handed to your video player when a site verifies your ip address, typically. Your player then loads the true location of the video hosted on their servers and begins to play on your java player in the browser… in general, content providers and broadcasters do not want you to have these links because they do not want users just linking to the files directly and sharing them with whoever. Content providers essentially then lose control over who is seeing what on your website as well as sometimes circumventing the injecting of ads they love to give us all the time. This is why we don’t get direct links to these files from service providers.
 
-These are how dynamic URL’s work and as such, a “processor” or web script to resolve the true URL’s to your player directly are developed to make these types of links work. People volunteer to create, host and continuously maintain these scripts and as such can stop at anytime they wish. A complete list of current ly active processors can be found here so you know which ones you can just link from web pages from: http://www.navixtreme.com/proc_list
+These are how dynamic URL’s work and as such, a “processor” or web script to resolve the true URL’s to your player directly are developed to make these types of links work. People volunteer to create, host and continuously maintain these scripts and as such can stop at anytime they wish. A complete list of currently active processors can be found here so you know which ones you can just link from web pages from: http://www.navixtreme.com/proc_list
 
 If you know how to do some web scripting, write regular expressions and can figure out how to resolve a dynamic URL to make a “processor”, then check out this section to learn how to develop processors for your favorite website: http://www.navixtreme.com/proc_docs/
 
