Edited wiki page How_do_I_add_links_to_a_playlist through web user interface.

--- a/wiki/How_do_I_add_links_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_links_to_a_playlist.wiki
@@ -20,7 +20,7 @@ Normally, computer experts would use what is called a “port sniffer” to “s
 
 Essentially, what happens when someone clicks on a link in a browsers media player is that the actual URL of the file being stored on a server somewhere is secretly handed to your video player when a site verifies your ip address, typically. Your player then loads the true location of the video hosted on their servers and begins to play on your java player in the browser… in general, content providers and broadcasters do not want you to have these links because they do not want users just linking to the files directly and sharing them with whoever. Content providers essentially then lose control over who is seeing what on your website as well as sometimes circumventing the injecting of ads they love to give us all the time. This is why we don’t get direct links to these files from service providers.
 
-These are how dynamic URL’s work and as such, a “processor” or web script to resolve the true URL’s to your player directly are developed to make these types of links work. People volunteer to create, host and continuously maintain these scripts and as such can stop at anytime they wish. A complete list of currently active processors can be found here so you know which ones you can just link from web pages from: http://www.navixtreme.com/proc_list
+These are how dynamic URL’s work and as such, a “processor” or web script to resolve the true URL’s to your player directly are developed to make these types of links work. People volunteer to create, host and continuously maintain these scripts and as such can stop at anytime they wish. A complete list of currently active processors can be found here so you know which ones you can just link to web pages from: http://www.navixtreme.com/proc_list
 
 If you know how to do some web scripting, write regular expressions and can figure out how to resolve a dynamic URL to make a “processor”, then check out this section to learn how to develop processors for your favorite website: http://www.navixtreme.com/proc_docs/
 
