Edited wiki page How_do_I_add_links_to_a_playlist through web user interface.

--- a/wiki/How_do_I_add_links_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_links_to_a_playlist.wiki
@@ -66,4 +66,7 @@ http://i1061.photobucket.com/albums/t461/billdaly111/nx5.jpg
 *Other Notes Regarding Adding Links To A Playlist*
 Live streams in particular are a very hard media entry to add if you do not know how to do this thoroughly. Many times, when you try to capture a live stream media entry, the stream itself may not be working, thus the link you are grabbing will not work in Navi-X. RTMP streams require more than 1 parameter in the body of the URL to make work and if you do not know how to do this, you should read up more about rtmp streams before attempting to add them to Navi-X. Most RTMP and MMS streams will currently only work on XBMC. Boxee has broken support for these in their app. MMS streams work fine in Navi-X, however they must use port 80 in order to work.
 
+*RSS Feeds, XML Feeds and YouTube Playlists*
+In Navi-X, there is a fully customize RSS and XML parser built in to read and render a feed as a Navi-X playlist. *Not ALL feeds will work out of the box when added to a Navi-X playlist.* Sometimes we need to examine an rss feed and update Navi-X to make it work. If you have an RSS feed that does not work, please let us know at http://www.navixtreme.com/forums and as for YouTube playlists... from time to time the parser for this breaks down. Report it to us at http://www.navixtreme.com/forums and we will take a look at it for you. Normally it should work, but it does break at times due to changes from YouTube's end of web workings.
+
 If anyone would like me to expand on certain areas of this tutorial, please let me know at xironbillx@gmail.com at anytime and I will include them in here.
