--- a/wiki/How_do_I_find_RTMP_live_streams_to_put_into_Navi_X.wiki
+++ b/wiki/How_do_I_find_RTMP_live_streams_to_put_into_Navi_X.wiki
@@ -1,3 +1,5 @@
 Issue: How do I find RTMP live streams to put into Navi-X?
 
 Explanation: http://www.navixtreme.com/forums/?action=topic_view&id=1673
+
+Credits to k1m05 for the tutorial!!
