Edited wiki page How_do_I_enable_and_access_Adult_content_in_Navi_X through web user interface.

--- a/wiki/How_do_I_enable_and_access_Adult_content_in_Navi_X.wiki
+++ b/wiki/How_do_I_enable_and_access_Adult_content_in_Navi_X.wiki
@@ -4,3 +4,5 @@
 
 Member Preferences (where the Adult Content option is)
 http://www.navixtreme.com/members/
+
+tags: adult, mature, porn, porno, pornographic, sex
