--- a/wiki/Is_Navi_X_a_company_or_on_the_stock_market.wiki
+++ b/wiki/Is_Navi_X_a_company_or_on_the_stock_market.wiki
@@ -4,7 +4,5 @@ Explanation: No. Navi-X, Team Navi-X or it's members and affiliates are not a co
 
 We are a team of freelance individuals who come and go throughout the project, contributing code, artwork, creative projects and essential services to the Navi-X project in each members own time frame, for no pay or expectation of monetary gain.
 
-While your interest is appreciated in seeing Navi-X or Team Navi-X becoming a publicly traded company, we have no interest in doing this and have decided to make Navi-X an "open-source" application, free for everyone to use and distribute.
-
-
+While your interest is appreciated in seeing Navi-X or Team Navi-X becoming a publicly traded company, we have no interest in doing this and have decided to make Navi-X an "open-source" application, free for everyone to use and distribute, as long as Navi-X exists.
 
