--- a/wiki/Why_did_my_video_stream_stop_completely_while_playing.wiki
+++ b/wiki/Why_did_my_video_stream_stop_completely_while_playing.wiki
@@ -3,14 +3,8 @@
 
 *Explanation:* There are several reasons a video would stop in the middle of playing.
 
-1. The file host you are streaming from is being over used and does not have adequate bandwidth to tranfer the file to you.
-2. You were somehow disconnected from your internet connection, which caused the stream to drop.
-3. The file host is having a network or power outage.
-
-To Fix This Issue: 
-
-1. Try the file host later when they are less busy or try another source.
-2. Make sure you have a solid wireless connection or use a wired connection. If you are using DSL, make sure there is no static on your carpet or particularly the phone line connecting your modem to the internet. You can use Static Guard spray to remove static interference from your lines.
-3. There is nothing you can do about a network or power outage. Come back later and try again.
+1. The file host you are streaming from is being over used and does not have adequate bandwidth at this time to transfer the file to you continuously. *Try another streaming source site/scraper or try the current file host later when they are less busy.*
+2. You were somehow disconnected from your internet connection, which caused the stream to drop. *Make sure you have a solid wireless connection or use a wired connection. If you are using DSL, make sure there is no static on your carpet or particularly the phone line connecting your modem to the internet. You can use Static Guard spray to remove static interference from your lines if you have static issues in your home.*
+3. The file host is having a network or power outage. *There is nothing you can do about a network or power outage. Try another streaming source site/scraper or try the current file host later when they are less busy.*
 
 You can also try this troubleshooting guide made by iRoNBiLL... http://code.google.com/p/navi-x/wiki/Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X
