Edited wiki page Why_would_I_use_Navi_X through web user interface.

--- a/wiki/Why_would_I_use_Navi_X.wiki
+++ b/wiki/Why_would_I_use_Navi_X.wiki
@@ -5,4 +5,4 @@
 
 Some users like the internationally accessible content that is shared by other users or use Navi-X as a leisurely app on tv's and mobile devices to browse through a mountain of content to find new and interesting multimedia, contributed by users as well as collected through aggregated sources from different web sites publically available on the internet.
 
-Check out tinyurl.com/navixtweets to see what people are saying about Navi-X right now!
+Check out http://tinyurl.com/navixtweets to see what people are saying about Navi-X right now!
