--- a/wiki/How_do_I_install_Navi_X.wiki
+++ b/wiki/How_do_I_install_Navi_X.wiki
@@ -7,7 +7,7 @@
 
 1. Go to www.navi-x.org and click on "Downloads" then click the button that says "Download Navi-X" and save the file to your computers desktop.
 
-2. Install XBMC on your computer if you have not already. You can get the latest "stable" and "unstable" builds at http://xbmc.org/download/
+2. Install XBMC on your computer or device if you have not already. You can get the latest "stable" and "unstable" builds at http://xbmc.org/download/
 
 3. Once XBMC is installed open it and click on System > Addons > Install from Zip file. Select the location on your computer where you saved Navi-X and select the zip file. 
 
