--- a/wiki/How_can_I_donate_money_to_Navi_X.wiki
+++ b/wiki/How_can_I_donate_money_to_Navi_X.wiki
@@ -3,4 +3,4 @@
 
 *Explanation:* Team Navi-X and it's members do NOT accept donations of any kind. Navi-X is an open-source project and as such, the program is free of charge and free to distribute, as well as free for programmers to modify and use snippets of code from the application. We simply ask if you choose to use a snippet of code from the Navi-X code base, that you attribute the works of code to the original developer and creator of Navi-X, Rodejo.
 
-If you still insist on donating something to Navi-X, we always welcome adding fresh links to quality content on the internet so that all users may benefit from sharing great clips and media found on the internet. Anything you can do to benefit the users in terms of contributions to Navi-X coding or development is always welcomed.
+If you still insist on donating something to Navi-X, we always welcome adding fresh links to quality content on the internet so that all users may benefit from sharing great clips and media found on the internet. Anything you can do to benefit the users in terms of contributions to Navi-X coding or development is always welcomed as we are an open source project.
