--- a/wiki/Frequently_Asked_Questions.wiki
+++ b/wiki/Frequently_Asked_Questions.wiki
@@ -1,6 +1,6 @@
 #labels Phase-Support
 *Issue:* Frequently Asked Questions.
 
-*Explanation:* The frequently asked questions documentation is no longer being used as people did not use it enough for frequently asked question answers.
+*Explanation:* The frequently asked questions documentation is no longer being circulated as people in general did not use it enough for a reference point for Navi-X.
 
 Instead, this Wiki has been compiled and will serve the purpose of addressing all questions regarding Navi-X.
