Edited wiki page How_can_I_donate_time_money_or_supplies_to_Navi_X through web user interface.

--- a/wiki/How_can_I_donate_time_money_or_supplies_to_Navi_X.wiki
+++ b/wiki/How_can_I_donate_time_money_or_supplies_to_Navi_X.wiki
@@ -9,6 +9,6 @@ If you are willing to do any of the above for Navi-X, we greatly welcome and cha
 
 Navi-X is free of charge, free to distribute, as well as free for programmers to modify and use snippets of code from the application in their own works. We simply ask if you choose to use a snippet of code from the Navi-X code base, that you attribute the works of code to the original developer and creator of Navi-X, Rodejo.
 
-=Note:= If you wish to contribute to Navi-X, BUT insist on some sort of "quid pro quo", guarantee of service, monetary reparations either directly or indirectly or ask for anything in return for your contributions, PLEASE DO NOT BOTHER TO CONTRIBUTE TO NAVI-X!!
+*NOTE:* If you wish to contribute to Navi-X, BUT insist on some sort of "quid pro quo", guarantee of service, monetary reparations either directly or indirectly or ask for anything in return for your contributions, PLEASE DO NOT BOTHER TO CONTRIBUTE TO NAVI-X!!
 
 The fact is that Navi-X is an open source project and not a company or business and as such, does not allow for contractual obligations or considerations of any kind at this time. It has been deemed by the original creator of Navi-X that the application should permanently remain an open source project as in it's entirety. As such, we have chosen to respect the rights and wishes of it's creator and the users by making Navi-X forever an open source project. Please do not harass, intimidate or threaten our staff, members and users of Navi-X or appropriate actions may be taken to defend such assets. It is also a violation of U.S. federal law under the Computer Abuse and Fraud Act of 1984 to threaten or harass someone via the internet in an attempt to extort goods or services. If such an attempt is made on one of our staff or users, we reserve the right to prosecute an alleged aggressor to the fullest extent in a court of law, as allowed.
