--- a/wiki/How_do_I_install_Navi_X.wiki
+++ b/wiki/How_do_I_install_Navi_X.wiki
@@ -16,18 +16,7 @@
 To update Navi-X, simply grab the latest copy on our website for XBMC. 
 
 *On Boxee:*
-
-1. Install Boxee on your computer or turn on your Boxee Box. You can get the latest updated software at http://boxee.tv/download/
-
-2. At the main screen for Boxee, click on Apps > Repositories and add the following repository address:
-
-http://tinyurl.com/navixforboxee
-OR
-http://navi-x.googlecode.com/svn/trunk/boxee
-
-3. Click on "The Navi-X for Boxee Repository on GoogleCode" then click "Navi-X" to view the app description. Press left or right until "Favorite" is highlighted, then click on it to save the app to your favorites under Apps in Boxee.
-
-Boxee will always have the latest version available in the repository.
+The app for this platform has been discontinued. Anything else found outside of this is an unsupported version of the app or reminents of the old port that have been modded to make it work, in which case you need to find out who's supporting these ports still and get support from them on these topics. Thanks!
 
 *On Apple TV, iPad, iPhone and iOS supported devices:*
 
